# shishua-python

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg  setup.py
src/binding/: binding.pyx  buffered-shishua.h  shishua-avx2.h  shishua-neon.h  shishua-sse2.h  shishua.h
src/shishua/: __init__.py
test/: test.py
