[metadata]
name = shishua
version = 0.2.0
author = Thaddée Tyl
author_email = thaddee.tyl@gmail.com
description = SHISHUA: The fastest PRNG. A seedrandom-compatible random number generator.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/espadrine/shishua-python
project_urls =
    Bug Tracker = https://github.com/espadrine/shishua-python/issues
classifiers =
    Programming Language :: Python :: 3
    License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix
    Operating System :: MacOS
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Topic :: Software Development
    Topic :: Scientific/Engineering

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.data_files]
data = src/binding/binding.pyx, src/binding/buffered-shishua.h, src/binding/shishua.h, src/binding/shishua-sse2.h, src/binding/shishua-avx2.h, src/binding/shishua-neon.h

[options.packages.find]
where = src
